# homage-foreground-algo

./: .gitignore  VimGui._rar
Core/AgpLib/: Agp.dsp  Agp.mk  Agp.plg  Agp.vcp  Agp.vcproj  Agp.vcxproj  Agp.vcxproj.filters  Agp7.vcproj  AgpP.dsp  CMakeLists.txt  Makefile
Core/AgpLib/AgpColor/: AgpColor.h  AgpColorF.h  FillAux.h  Makefile
Core/AgpLib/AgpCutout/: AgpCutout.h
Core/AgpLib/AgpDepth/: AgpDepth.h  AgpDepthIn.h  Makefile
Core/AgpLib/AgpEdit/: AgpEdit.h  AgpEditTool.h  AgpSelect.h  Makefile
Core/AgpLib/AgpLayer/: AgpLayer.h  AgpLayerF.h  Makefile
Core/AgpLib/AgpTool/: AgpTool.h  Makefile
Core/AgpLib/Contour/: ContourType.h  LinkDisType.h  PlinkType.h
Core/AgpLib/Contour-12-12-03/: ContourType.h
Core/AgpLib/Depth/: BottleType.h  Depth.h  DepthModelType.h  DmBottleType.h  DmCornerType.h  DmPlaneType.h
Core/AgpLib/EmbedLink/: EmbedLink.h  EmbedLinkIn.h  Makefile
Core/AgpLib/Filter/: Filter.h  Makefile
Core/AgpLib/GpTool/: Makefile
Core/AgpLib/GpType/: AdepthType.h  BflType.h  BgpType.h  ColorType.h  Configuration.h  DepthType.h  EdgeType.h  GpType.h  HunchType.h  JntType.h  LayerType.h  LinkType.h  MbrType.h  N3Type.h  NfType.h  ProfileType.h  QxyType.h  RidgeType.h  VimFile.h  WidthType.h
Core/AgpLib/Inf/: Inf.h  InfIn.h  Makefile
Core/AgpLib/Layer/: Layer.h  LayerAux.h
Core/AgpLib/LinkTool/: Makefile  linktool.h
Core/AgpLib/Log/: Log.h
Core/AgpLib/Mold/: AttPrm.h  LnAttCType.h  LnAttCmp.h  LnAttType.h  LnDisType.h  LnSegType.h  MoldIn.h  mold.h
Core/AgpLib/N3Aux/: N3Aux.h  N3AuxIn.h  N3AuxType.h
Core/AgpLib/N3Prime/: Makefile  N3Prime.h  N3PrimeIn.h
Core/AgpLib/RelValue/: Makefile  RelValue.h  RelValueIn.h
Core/AgpLib/RlLink/: Makefile  RlLink.h  RlLinkFree.h  RlType.h  RlType2.h
Core/AgpLib/Texture/: Texture.h
Core/AgpLib/_bak/: aa.mk
Core/Util/: CMakeLists.txt  UThread._rar  Util.mk  Util.vcproj  Util.vcxproj  Util.vcxproj.filters
Core/Util/UGeoApp/: GappDump.c  GappTool.c  GeoApp.h  GeoApp2.c  ls_appr.h
Core/Util/UPoly/: Poly1d4Type.h  Poly2d3Tool.c  Poly2d3Type.h  Poly2d4Tool.c
Core/Util/UThread/: VCriticalSection.cpp  VCriticalSection.h  VExcute.h  VLogger.cpp  VLogger.h  VPipeTask.cpp  VProcess.cpp  VProcess.h  VQueue.cpp  VQueue.h  VSemaphorePosix.cpp  VSemaphorePosix.h  VThread.cpp  VThread.h  VThreadPosix.cpp  VThreadPosix.h  qData.h
Core/Util/UVfile/: FrmVrgb.c  cost211.h
Core/Util/UZlib/: Makefile  zip.c  zip_file.h
Core/Util/Ubase64/: Base64.cpp  Base64.h  Makefile
Core/Util/Ubox/: Box2Dump.c  Box2Tool.c  Box2d.h  Box3d.h  Makefile
Core/Util/Ubst/: BstGet.c  BstIn.c  BstPut.c  BstTool.c  Makefile
Core/Util/Ucamera/: Pt2dApproximateLineAxB.c  Pt2dApproximateLinePv-12-10-12.c  Pt2dApproximateLinePv.c  Pt2dApproximateLinePv.cpp  Pt2dComponnet.c  Pt2dCurvtur.c  Pt2dIo.c  Pt2dTool.c  Pt2dType.h  pt2dftool.cpp
Core/Util/Ucfg/: CfgParser.c  CfgTool.c  CfgType.h  CfgWrite.c  Makefile
Core/Util/Ucode/: code.h
Core/Util/Uconfig3d/: Config3dIo.c  Makefile
Core/Util/Ucst/: CstFile.c  CstTool.c  CstType.h  CstXml.c  Makefile
Core/Util/Ufbst/: FbstPut.c  FbstTool.c  FbstType.h
Core/Util/Ufixed/: FloatMacro.h
Core/Util/Ugio/: GioType.h
Core/Util/Uheap/: HeapSTool.c  HeapTool.c  HeapType.h
Core/Util/Uhuffman/: Huffman.c  Huffman.h  HuffmanIn.h  Makefile
Core/Util/Uigp/: GpDir.c  GpDump.c  GpFile.c  GpFile1.c  GpFileName.c  GpFunction.c  GpIo.c  GpMemoryLeak.c  GpMsg.c  GpPackage.c  GpProgram.c  GpRelinquish.c  GpSuspend.c  GpTempFile.c  Render.h  hypotA.tab  igp.h
Core/Util/Uinf/: Makefile
Core/Util/Ujet1/: Jet1Type.h  Makefile
Core/Util/Ujet2/: AppJet2.c  DiagonalJet2.c  FoldJmap23.c  InverseJmap23.c  Jet23Array.c  Jet23Map.c  Jet23Tool.c  Jet2Inverse.c
Core/Util/Ujni/: VimJvm.h  Vjni.h
Core/Util/Uln/: CrPlnType.h  LnCircle.c  LnFromGapp.c  LnTool.c  LnType.h  PlnApproximate.cpp  PlnFTool.cpp  PlnFit - 14-06-19.cpp  PlnFit.cpp  PlnFit.cpp-13-02-18  PlnFitA.cpp  PlnParallel.cpp  PlnRead.cpp  PlnSide.cpp  PlnSmooth.cpp  PlnTool.c  PlnTool.cpp  PlnType.h  PlnType.h-13-02-18  PlnWrite.c
Core/Util/Uln - 14-02-11/: CrPlnTool.c  CrPlnToolN.c  LnBox.c  PlnEigen.cpp  PlnParallelDistance.cpp  PlnSide.cpp  PlnTool.cpp  PlnType.h  PlnWrite.cpp
Core/Util/Ulog/: Log.c  Log.h  LogFile.cpp  LogFile.h
Core/Util/Ulz/: lz.h  lz_decode.c  lz_encode.c
Core/Util/Umat/: Makefile  Mat2fBase.c  Mat2fBaseDct.c  Mat2fBaseJet2.c
Core/Util/Umath/: Eigen2dTool.c  LT2Tool.c  LT2Type.h  LT2sType.c  LsfType.h  Matrix.c  Matrix.h  Matrix2Tool.c  Matrix2Type.h  Matrix4Tool.c  Matrix4Type.h  MatrixSvd.c  Quaternion.c  umath.h
Core/Util/Umbmap/: Mbmap2Image.c  MbmapFile.c  MbmapWriteBmp.c  PixelDup.c  RgbYCrCb.c  Row.c  mbmap.h  rgb_yqa.c
Core/Util/Umedia/: Makefile  MdFormatIn.h  MediaDataCo.c  MediaDataMultiPart.c  MediaDataRead.c  MediaDataTool.c  MediaDataType.h  MediaFile.c
Core/Util/Uport/: inline.h
Core/Util/Uprm/: Makefile  Prm.c  PrmAux.c  prm.h
Core/Util/Upt/: Pt3dTool.cpp  Pt3dType.h  Pt3fIo.c  Pt3fTool.c  Pt3ftype.h
Core/Util/Usmil/: SmilType.h
Core/Util/Usynch/: usynch.c
Core/Util/Utime/: GpTime.c  GpTime.h
Core/Util/Uunity/: UnityS3.c  UnityS4.c  unity.c
Core/Util/Uvec/: BitVector.c  BitVector.h  Vec2dIo.c  Vec2dTool.c  Vec3d.h  Vec3dApp.c
Core/Util/Uview/: ViewActualBox.c  ViewCamera.c  ViewConfig.c  ViewCreateNormal.c  ViewEulerV.c  ViewObject.c  ViewPer.c  ViewRoll.c  ViewSub.c  viewnormal.c  viewtype.h
Core/Util/Uvl/: IntTool.cpp  Map2dTool.cpp  Map2dType.h  TfMean.cpp  TfTool.cpp  TfType.h  Vl2fTool.c  Vl2f_Lt2.c  Vl3dStl.c  Vl3dTool.c
Core/Util/Uxml/: Makefile  Ustr.c  Ustr.h  XmlDoc.c  XmlIO.c  XmlParser.c  XmlPut.c  XmlPutCst.c  XmlStr.c  XmlStr.h  XmlType.h  XmlWrite.c
Core/Util/_bak/: Util-1.vcxproj  Util.plg  Util.vcp  Util7.vcproj  UtilP.dsp
Core/_bak/Util_14-03-12/: Android.mk  CMakeCache.txt  CMakeLists.txt  Makefile  Util.mk  Util.vcproj  Util.vcxproj  (+1 more)
Edge/EdgeLib/: CMakeLists.txt  EdgeLib.mk  EdgeLib.vcproj  EdgeLib.vcxproj  EdgeLib.vcxproj.filters  ReadMe.txt
Homage/HomageLib/: CMakeLists.txt  Homage.cpp  Homage.h  HomageLib.vcxproj  ReadMe.txt
(+1787 files in other folders)
