# -*- cmake -*-
# written by Darren Ha(darren.ha@samsung.com)

cmake_minimum_required(VERSION 2.8)

# replace Agp with binary name. e.g. mbase or FBase
SET (this_target Agp)
PROJECT(${this_target})

## section: include directory

INCLUDE_DIRECTORIES(
  ../AgpLib,../EpLib,../EpnLib,../VimageLib,../ExpandiLib,../Util,../ExpandLib,../CodingLib,../CorTransformLib,../ImageLib
  )

## section: source files
# Add your source files here (one file per line), please SORT in alphabetical order for future maintenance
SET (${this_target}_SOURCE_FILES
	./AgpEdit/AgpJntN3ReplaceEdge.c
	./AgpEdit/AgpJntN3ReplaceIn.c
	./AgpTool/AgpEdgeToN3.c
	./AgpTool/AgpJnt.c
	./AgpTool/AgpLt2.c
	./AgpTool/AgpRescale.c
	./Contour/ContourArea.c
	./Contour/ContourArray.c
	./Contour/ContourCircle.c
	./Contour/ContourDump.c
	./Contour/ContourImageMask.c
	./Contour/ContourLFlip.c
	./Contour/ContourLt2.c
	./Contour/ContourOverlap.c
	./Contour/ContourRead.c
	./Contour/ContourWrite.c
	./Contour/PlinkUnion.c
	./LinkTool/LinkFromLn.c
	AgpColor/AgpAdaptivePalette.c
	AgpColor/AgpChangeProfile.c
	AgpColor/AgpColorF.c
	AgpColor/AgpColorF1.c
	AgpColor/AgpColorFN.c
	AgpColor/AgpGrbRgb.c
	AgpColor/AgpRgbRange.c
	AgpColor/AgpRgbY.c
	AgpColor/AgpRgbYCrCb.c
	AgpColor/AgpRgbYiq.c
	AgpColor/AgpRgbYmax.c
	AgpColor/AgpYCrCbRangeY.c
	AgpColor/AgpYCrCbRgb.c
	AgpColor/AgpYiqRgb.c
	AgpColor/FillAux.c
	AgpColor/Makefile
	AgpCutout/AgpCutout.c
	AgpCutout/AgpCutoutFit.c
	AgpCutout/AgpCutoutN.c
	AgpCutout/AgpCutoutNWrapper.c
	AgpCutout/AgpCutoutWrapper.c
	AgpDepth/AgpDepthAdd.c
	AgpDepth/AgpDepthDefault.c
	AgpDepth/AgpDepthRange.c
	AgpDepth/AgpDepthSet.c
	AgpDepth/AgpDepthSetBottle.c
	AgpDepth/AgpDepthSetCorner.c
	AgpDepth/AgpDepthSetL.c
	AgpDepth/AgpDepthSmooth0x4.c
	AgpDepth/AgpDepthValue.c
	AgpDepth/Makefile
	AgpEdit/AgpDefaultProfile.c
	AgpEdit/AgpJnt.c
	AgpEdit/AgpJntConnect.c
	AgpEdit/AgpJntCutBrn.c
	AgpEdit/AgpJntEdgeReorder.c
	AgpEdit/AgpJntN3.c
	AgpEdit/AgpJntN3Reposition.c
	AgpEdit/AgpLink2Jnt.c
	AgpEdit/AgpLinkDelete.c
	AgpEdit/AgpLinkFilter.c
	AgpEdit/AgpLinkInverse.c
	AgpEdit/AgpLinkN3rToRidge.c
	AgpEdit/AgpLinkN3ToEdge.c
	AgpEdit/AgpLinkSplit.c
	AgpEdit/AgpPolylinkDelete.c
	AgpEdit/AgpPolylinkInsert.c
	AgpEdit/AgpPolylinkSelect.c
	AgpEdit/AgpProfileLoad.c
	AgpEdit/AgpSelect.c
	AgpEdit/Makefile
	AgpLayer/AgpLayer.c
	AgpLayer/AgpLayerBorder.c
	AgpLayer/AgpLayerBox.c
	AgpLayer/AgpLayerClear.c
	AgpLayer/AgpLayerColor.c
	AgpLayer/AgpLayerContourPolylink.c
	AgpLayer/AgpLayerCopy.c
	AgpLayer/AgpLayerCopyContour.c
	AgpLayer/AgpLayerCut.c
	AgpLayer/AgpLayerF.c
	AgpLayer/AgpLayerF1.c
	AgpLayer/AgpLayerFC.c
	AgpLayer/AgpLayerFC1.c
	AgpLayer/AgpLayerFlattening.c
	AgpLayer/AgpLayerFn3.c
	AgpLayer/AgpLayerHole.c
	AgpLayer/AgpLayerInit.c
	AgpLayer/AgpLayerMiddle.c
	AgpLayer/AgpLayerRenumbering.c
	AgpLayer/AgpLayerSelect.c
	AgpLayer/Makefile
	AgpTool/AgpAddBorder.c
	AgpTool/AgpAddConstLayer.c
	AgpTool/AgpAppend.c
	AgpTool/AgpBgpFill.c
	AgpTool/AgpBgpFillHole.c
	AgpTool/AgpBgpFillN.c
	AgpTool/AgpBgpTest.c
	AgpTool/AgpBgValue.c
	AgpTool/AgpBrList.c
	AgpTool/AgpCheckLinkFbr.c
	AgpTool/AgpCjeckIn.c
	AgpTool/AgpCleare.c
	AgpTool/AgpCloseHole.c
	AgpTool/AgpConnectJnt.c
	AgpTool/AgpConst.c
	AgpTool/AgpCopy.c
	AgpTool/AgpCountorLink.c
	AgpTool/AgpDelete.c
	AgpTool/AgpDither.c
	AgpTool/AgpDitherEdge.c
	AgpTool/AgpDumpRead.c
	AgpTool/AgpDumpWrite.c
	AgpTool/AgpExtend.c
	AgpTool/AgpFlipH.c
	AgpTool/AgpFlipV.c
	AgpTool/AgpImage.c
	AgpTool/AgpJntBrn4.c
	AgpTool/AgpLinkForceMaxLA.c
	AgpTool/AgpLinkLen.c
	AgpTool/AgpLinkNo.c
	AgpTool/AgpLinkProf.c
	AgpTool/AgpMakeUnion.c
	AgpTool/AgpMold.c
	AgpTool/AgpN3ToEdge.c
	AgpTool/AgpNf.c
	AgpTool/AgpProfile.c
	AgpTool/AgpProfileWidth.c
	AgpTool/AgpRemoveN3R_06.c
	AgpTool/AgpRepositionLayer.c
	AgpTool/AgpScriptRead.c
	AgpTool/AgpScriptWrite.c
	AgpTool/AgpSetBr1_06.c
	AgpTool/AgpTransparent2Flat.c
	AgpTool/AgpTransparentWidth.c
	AgpTool/AgpUnion.c
	AgpTool/AgpUpgrade06.c
	AgpTool/AgpZoom.c
	AgpTool/AgpZoomP.c
	AgpTool/Makefile
	Contour/ContourTool.c
	Contour/LinkDisTool.c
	Contour/PlinkTool.c
	Depth/DmBottle.c
	Depth/DmCorner.c
	Depth/DmCorner90View.c
	Depth/DmPlane.c
	Depth/DmTool.c
	EMBEDLINK/EmbedFitBorder.c
	EmbedLink/EmbedFitJnt.c
	EmbedLink/EmbedGapp.c
	EmbedLink/EmbedHunch.c
	EmbedLink/EmbedJntN3.c
	EmbedLink/EmbedLink.c
	EmbedLink/EmbedLinkFinal.c
	EmbedLink/EmbedLinkFit.c
	EmbedLink/EmbedLinkFitCurve.c
	EmbedLink/EmbedMarkBr.c
	EmbedLink/EmbedN3.c
	EmbedLink/EmbedRidge.c
	EmbedLink/EmbedRlLink.c
	EmbedLink/EmbedSegment.c
	EmbedLink/EmbedSelect.c
	EmbedLink/Makefile
	Filter/FilterAgp.c
	Filter/FilterEdge.c
	Filter/FilterHunch.c
	Filter/FilterLinkLen.c
	Filter/FilterN3.c
	Filter/FilterRh2Hunch.c
	Filter/FilterRidge.c
	Filter/Makefile
	GpTool/AdepthTool.c
	GpTool/AgpBox.c
	GpTool/AgpIn.c
	GpTool/AgpInsert.c
	GpTool/AgpLnf.c
	GpTool/AgpNfArray.c
	GpTool/EdgeTool.c
	GpTool/GpTool.c
	GpTool/HunchTool.c
	GpTool/JntEdge.c
	GpTool/JntN3.c
	GpTool/JntN3In.c
	GpTool/JntRN3.c
	GpTool/JntTool.c
	GpTool/LayerTool.c
	GpTool/LinkIn.c
	GpTool/LinkN3.c
	GpTool/LinkTool.c
	GpTool/LinkTool1.c
	GpTool/Makefile
	GpTool/N3Tool.c
	GpTool/NfAux.c
	GpTool/ProfileTool.c
	GpTool/RidgeTool.c
	GpTool/WidthTool.c
	Inf/InfAgp.c
	Inf/InfBgp.c
	Inf/InfEdge.c
	Inf/InfHunch.c
	Inf/InfJnt.c
	Inf/InfN3.c
	Inf/InfProfile.c
	Inf/InfRHnch.c
	Inf/InfRidge.c
	Inf/Makefile
	Layer/AgpLayerFiletr.c
	Layer/AgpLayerIdF.c
	Layer/AgpLayerIdF1.c
	Layer/AgpLayerValidate.c
	Layer/LayerAux.c
	LinkTool/Bezier2Links.c
	LinkTool/LinkAppend.c
	LinkTool/LinkBox.c
	LinkTool/LinkClip.c
	LinkTool/LinkDistance.c
	LinkTool/LinkFromGapp.c
	LinkTool/LinkFromLine.c
	LinkTool/LinkInsidePoint.c
	LinkTool/LinkInternalSide.c
	LinkTool/LinkIo.c
	LinkTool/LinkLayer.c
	LinkTool/LinkReapproximae.c
	LinkTool/LinkSet.c
	LinkTool/LinkSetProfile.c
	LinkTool/LinkSimplify.c
	LinkTool/LinkSplit.c
	LinkTool/LinkTool2.c
	LinkTool/Makefile
	LinkTool/PolylinkCopy.c
	LinkTool/TlSelect.c
	Log/Log.c
	Makefile
	Mold/LnAttCConnect.c
	Mold/LnAttCmp.c
	Mold/LnAttCmpBuild.c
	Mold/LnAttCmpFinal.c
	Mold/LnAttCmpStep.c
	Mold/LnAttCmpStep4.c
	Mold/LnAttCmpStepN.c
	Mold/LnAttCmpStepNS.c
	Mold/LnAttCmpStepW.c
	Mold/LnAttCPos.c
	Mold/LnAttCTied.c
	Mold/LnAttCTool.c
	Mold/LnAttTool.c
	Mold/LnDisTool.c
	Mold/LnSegTool.c
	Mold/Mold.c
	Mold/MoldCrossSeg.c
	Mold/MoldParallelSeg.c
	N3Aux/N3Aux.c
	N3Aux/N3Aux_1.c
	N3Aux/N3AuxFree.c
	N3Aux/N3AuxIn.c
	N3Aux/N3AuxInDegenric.c
	N3Aux/N3AuxInNull.c
	N3Aux/N3AuxJnt.c
	N3Aux/N3AuxLink.c
	N3Aux/N3AuxLoad.c
	N3Aux/N3AuxProfile.c
	N3Aux/N3AuxTool.c
	N3Prime/Makefile
	N3Prime/N3PrimeAgp.c
	N3Prime/N3PrimeFree.c
	N3Prime/N3PrimeInNull.c
	N3Prime/N3PrimeLink.c
	N3Prime/N3PrimeLoad.c
	N3Prime/N3PrimeN3ToEdge.c
	N3Prime/N3PrimeProfile.c
	RelValue/AbsValue.c
	RelValue/AbsValueO.c
	RelValue/Makefile
	RelValue/RelValue.c
	RelValue/SetWidth.c
	RlLink/LinkReplace.c
	RlLink/Makefile
	RlLink/RlCorner.c
	RlLink/RlGapp.c
	RlLink/RlLink.c
	RlLink/RlLink2.c
	RlLink/RlTool.c
	RlLink/RlTool2.c
	Texture/TextureCopy.c
	Texture/TextureCopyHunch.c
	Texture/TexturePaste.c
	Texture/TexturePasteHunch.c
	)

## section: header files
# Add your header files here(one file per line), please SORT in alphabetical order for future maintenance!
SET(${this_target}_HEADER_FILES
	./AgpEdit/AgpEdit.h
	AgpColor/AgpColor.h
	AgpColor/AgpColorF.h
	AgpColor/FillAux.h
	AgpCutout/AgpCutout.h
	AgpDepth/AgpDepth.h
	AgpDepth/AgpDepthIn.h
	AgpEdit/AgpEditTool.h
	AgpEdit/AgpSelect.h
	AgpLayer/AgpLayer.h
	AgpLayer/AgpLayerF.h
	AgpTool/AgpTool.h
	Contour/ContourType.h
	Contour/LinkDisType.h
	Contour/PlinkType.h
	Depth/Depth.h
	Depth/DepthModelType.h
	Depth/DmBottleType.h
	Depth/DmCornerType.h
	Depth/DmPlaneType.h
	EmbedLink/EmbedLink.h
	EmbedLink/EmbedLinkIn.h
	Filter/Filter.h
	GpType/AdepthType.h
	GpType/BgpType.h
	GpType/ColorType.h
	GpType/Configuration.h
	GpType/DepthType.h
	GpType/EdgeType.h
	GpType/GpType.h
	GpType/HunchType.h
	GpType/JntType.h
	GpType/LayerType.h
	GpType/LinkType.h
	GpType/MbrType.h
	GpType/N3Type.h
	GpType/NfType.h
	GpType/ProfileType.h
	GpType/RidgeType.h
	GpType/WidthType.h
	Inf/Inf.h
	Inf/InfIn.h
	Layer/Layer.h
	Layer/LayerAux.h
	LinkTool/LinkLayer.h
	LinkTool/LinkTool.h
	LinkTool/TlType.h
	Log/Log.h
	Mold/LnAttCmp.h
	Mold/LnAttCType.h
	Mold/LnAttType.h
	Mold/LnDisType.h
	Mold/LnSegType.h
	Mold/Mold.h
	Mold/MoldIn.h
	N3Aux/N3Aux.h
	N3Aux/N3AuxIn.h
	N3Aux/N3AuxType.h
	N3Prime/N3Prime.h
	N3Prime/N3PrimeIn.h
	RelValue/RelValue.h
	RelValue/RelValueIn.h
	RlLink/RlLink.h
	RlLink/RlType.h
	RlLink/RlType2.h
	Texture/Texture.h
	)

SET_SOURCE_FILES_PROPERTIES(${this_target}_HEADER_FILES
                            PROPERTIES HEADER_FILE_ONLY TRUE)
LIST(APPEND ${this_target}_SOURCE_FILES ${${this_target}_HEADER_FILES})

## section: add definitions
# 	add prefix -D. example> -DSHP
#  - DO NOT add  the following definitions(already defined in ${OSP_DEFINITIONS}:
# 	-DSHP, -DWIN32, -D_WINDOWS, -D_DEBUG, -D_USRDLL, -D_CRT_SECURE_NO_DEPRECATE
ADD_DEFINITIONS(
	)

## section: add target
ADD_LIBRARY (${this_target} STATIC ${${this_target}_SOURCE_FILES} )

## section: add dependency
# dependency determines overall build order.
#ADD_DEPENDENCIES(${this_target} )

## section: set link libraries
TARGET_LINK_LIBRARIES( ${this_target}
		)
